# c2detect

./: .gitignore  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  action.yml  install.sh  pyproject.toml
c2detect/: __init__.py  __main__.py  active.py  ai_backend.py  cli.py  connect.py  core.py  correlate.py  feeds.py  mcp_server.py  rules.py  selfcheck.py
demos/: 01_soc_triage.py  02_threat_intel_feeds.py  03_detection_rules.py  04_incident_response.py  05_campaign_correlation.py  06_sarif_code_scanning.py  07_ci_gate.py  08_html_report.py  09_status_badge.py  10_jsonl_streaming.py  11_freetext_telemetry.py  12_correlation_graph.py  13_threshold_tuning.py  14_signature_inventory.py  15_coverage_selfcheck.py  16_feeds_plus_signatures.py  17_beacon_cadence.py  18_sigma_per_family.py  19_correlate_gate.py  20_air_gap_workflow.py  _common.py  observations.json  run_all.py
deploy/: docker-compose.yml  k8s.yaml
docs/: ADVANCED.md  ARCHITECTURE.md  CORRELATION.md  DEMOS.md  DEPLOY.md  INSTALL.md
examples/: db.txt  help.txt  self-check.txt  version.txt
ports/: README.md
scripts/: gen_demos.py
tests/: test_active.py  test_ai_backend.py  test_cli_errors.py  test_cli_integration.py  test_connect.py  test_connect_edgecases.py  test_core_edgecases.py  test_correlate.py  test_correlate_edgecases.py  test_datafeeds.py  test_db_coverage.py  test_deep.py  test_demos.py  test_features.py  test_feeds.py  test_matching_engine.py  test_mcp_server.py  test_passive.py  test_probe_integration.py  test_public_api.py  test_reporting_edgecases.py  test_rules.py  (+4 more)
(+62 files in other folders)
